fix scrollbar

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -75,8 +75,8 @@ a {
 	width: 60px;
 }
 
-li {
-	padding: none;
+.dropdown-menu {
+	padding: 0;
 }
 
 .dropdown ul {
